--- a/eureka/src/main/resources/application.properties
+++ b/eureka/src/main/resources/application.properties
@@ -2,3 +2,4 @@ server.port=8990
 
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+eureka.client.service-url.defaultZone=http://localhost:8990/eureka
