--- a/email-service/src/main/resources/application.yml
+++ b/email-service/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-
 eureka:
   client:
     service-url:
@@ -10,3 +9,16 @@ server:
 spring:
   application:
     name: email-service
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: someGmailUser@gmail.com
+    password: passToSomeGmailUser
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls: true
+
+restaurant:
+  restaurantName: Restauracja Spring
