--- a/authentication-service/src/main/resources/application.yml
+++ b/authentication-service/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: authentication-service
   datasource:
-    url: jdbc:mysql://172.17.0.2:3306/restaurant_users
+    url: jdbc:mysql://localhost:3306/restaurant_users
     username: root
     password: password
 eureka:
