--- a/menu-service/src/main/resources/application.properties
+++ b/menu-service/src/main/resources/application.properties
@@ -2,4 +2,10 @@ spring.data.mongodb.database=restaurant
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 
+eureka.client.service-url.defaultZone=http://localhost:8990/eureka
+eureka.instance.prefer-ip-address=true
+
 server.port=8084
+
+spring.application.name=menu-service
+server.error.include-stacktrace=never
