add liquibase to the project

--- a/authentication-service/pom.xml
+++ b/authentication-service/pom.xml
@@ -107,8 +107,15 @@
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
-
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.liquibase/liquibase-core -->
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+			<version>3.10.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
