--- a/authentication-service/src/main/resources/application-test.yml
+++ b/authentication-service/src/main/resources/application-test.yml
@@ -6,6 +6,8 @@ spring:
     username: user
     password:
     driver-class-name: org.h2.Driver
+    liquibase:
+      change-log: classpath:db/test/changelog.xml
 
 jwt:
   audience: Restaurant authoriaztaion
