--- a/authentication-service/src/main/resources/application-test.yml
+++ b/authentication-service/src/main/resources/application-test.yml
@@ -1,8 +1,10 @@
 spring:
   application:
     name: restaurant-authentication-service
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
   datasource:
-    url: jdbc:h2:~/testdb;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:h2:mem:testdb
     username: user
     password:
     driver-class-name: org.h2.Driver
