--- a/authentication-service/pom.xml
+++ b/authentication-service/pom.xml
@@ -18,6 +18,8 @@
 		<java.version>11</java.version>
 		<spring-cloud.version>Hoxton.SR3</spring-cloud.version>
 		<jjwt.version>0.11.1</jjwt.version>
+		<google.gson.version>2.8.6</google.gson.version>
+		<liquibase.version>3.10.0</liquibase.version>
 	</properties>
 
 	<dependencies>
@@ -95,7 +97,7 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.8.6</version>
+			<version>${google.gson.version}</version>
 		</dependency>
 
 		<dependency>
@@ -114,7 +116,7 @@
 		<dependency>
 			<groupId>org.liquibase</groupId>
 			<artifactId>liquibase-core</artifactId>
-			<version>3.10.0</version>
+			<version>${liquibase.version}</version>
 		</dependency>
 
 	</dependencies>
