--- a/authentication-service/pom.xml
+++ b/authentication-service/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.5.RELEASE</version>
+		<version>2.3.1.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.vandemos</groupId>
@@ -20,6 +20,7 @@
 		<jjwt.version>0.11.1</jjwt.version>
 		<google.gson.version>2.8.6</google.gson.version>
 		<liquibase.version>3.10.0</liquibase.version>
+		<jakarta.version>2.0.2</jakarta.version>
 	</properties>
 
 	<dependencies>
@@ -117,6 +118,11 @@
 			<groupId>org.liquibase</groupId>
 			<artifactId>liquibase-core</artifactId>
 			<version>${liquibase.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+			<version>${jakarta.version}</version>
 		</dependency>
 
 	</dependencies>
